mastodon/streaming.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: streaming
  template:
    metadata:
      labels:
        app: streaming
    spec:
      containers:
        - name: streaming
          image: tootsuite/mastodon:v4.2.1
          ports:
            - containerPort: 4000
          command: ["node"]
          args:
            - ./streaming
          livenessProbe:
            httpGet:
              path: /api/v1/streaming/health
              port: 4000
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: streaming
  namespace: mastodon
spec:
  selector:
    app: streaming
  ports:
    - port: 80
      targetPort: 4000
