mastodon/web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: mastodon
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
        - name: public-system
          persistentVolumeClaim:
            claimName: public-system
      containers:
        - name: web
          image: tootsuite/mastodon:v4.2.1
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: public-system
              mountPath: /mastodon/public/system
          command: ["/bin/sh"]
          args:
            - -c
            - |
              rm -f /mastodon/tmp/pids/server.pid
              RAILS_ENV=production bundle exec rails db:migrate
              bundle exec rails s -p 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: mastodon
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
